workspace = { members = ["api", "cli", "migration", "model"] }
[package]
name = "mypass"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mypass_cli = { path = "./cli" }
api = { path = "./api" }
tokio = { version = "1.29.0", features = ["full"] }
