[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
migration = { path = "../migration" }
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
argon2 = "0.5.3"
url = "2.5.0"

[dependencies.sea-orm]
version = "0.12.4"                                 # sea-orm version
features = ["sqlx-sqlite", "runtime-tokio-rustls"]

[dependencies.uuid]
version = "*"
features = ["v4"]
