[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
migration = { path = "../migration" }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
url = "2.5.0"
csv = "1.3.0"
serde = "1.0.197"
serde_json = "1.0"
chrono = "0.4.37"
rand = "0.8.5"

[dependencies.sea-orm]
version = "0.12.4"                                 # sea-orm version
features = ["sqlx-sqlite", "runtime-tokio-rustls"]

[dependencies.uuid]
version = "*"
features = ["v4"]
