[package]
name = "mypass_cli"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
api = { path = "../api" }
model = { path = "../model" }
tokio = { version = "1.29.0", features = ["full"] }
rpassword = "7.3.1"
cli-table = "0.4.7"
cli-clipboard = "0.4.0"
